--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
         measurementId: "G-V6CGGJ81JG"
       };
       firebase.initializeApp(firebaseConfig);
+
+  // --- REALTIME RELIABILITY PATCH ADDED ---
+  firebase.firestore().settings({
+    experimentalForceLongPolling: true,
+    merge: true
+  });
+
+  firebase.firestore().enablePersistence({ synchronizeTabs: true })
+    .catch((err) => {
+      console.warn("Persistence error:", err.code);
+    });
+
       if (typeof firebase.analytics === 'function') firebase.analytics();
       console.log('Firebase initialized (compat).');
     } catch (e) {
@@ -401,11 +413,11 @@
                   <>
                     <div>
                       <label className="block text-sm font-medium text-slate-700 mb-1">Nama Penuh</label>
-                      <input type="text" required value={fullName} onChange={e=>setFullName(e.target.value.toUpperCase())} onChange={(e) => setFullName(e.target.value.toUpperCase())} className="block w-full px-3 py-2.5 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 bg-slate-50" />
+                      <input type="text" required value={fullName} onChange={(e) => setFullName(e.target.value.toUpperCase())} className="block w-full px-3 py-2.5 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 bg-slate-50" />
                     </div>
                     <div>
                       <label className="block text-sm font-medium text-slate-700 mb-1">Unit / Sekolah</label>
-                      <input type="text" required value={department} onChange={e=>setDepartment(e.target.value.toUpperCase())} onChange={(e) => setDepartment(e.target.value)} className="block w-full px-3 py-2.5 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 bg-slate-50" />
+                      <input type="text" required value={department} onChange={(e) => setDepartment(e.target.value)} className="block w-full px-3 py-2.5 border border-slate-300 rounded-lg focus:ring-2 focus:ring-blue-500 bg-slate-50" />
                     </div>
                   </>
                 )}
