--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
   <script>
     try {
       const firebaseConfig = {
-        apiKey: "AIzaSyBU1n6OAmYxY_SjFuhYkop7C7CrFJja6Do",
-        authDomain: "egerak-4f922.firebaseapp.com",
-        projectId: "egerak-4f922",
-        storageBucket: "egerak-4f922.firebasestorage.app",
-        messagingSenderId: "567427021114",
-        appId: "1:567427021114:web:cf5496d2fc14eb84893803",
-        measurementId: "G-V6CGGJ81JG"
+         apiKey: "AIzaSyCEUZrxNp8IYMwSSJDBPIOazDJAe3Bvklo",
+         authDomain: "egerak-30c14.firebaseapp.com",
+         databaseURL: "https://egerak-30c14-default-rtdb.asia-southeast1.firebasedatabase.app",
+         projectId: "egerak-30c14",
+         storageBucket: "egerak-30c14.firebasestorage.app",
+         messagingSenderId: "415090639922",
+         appId: "1:415090639922:web:1c293e5afad29ec5c1e82b",
+         measurementId: "G-YVE51E3Z6H"
       };
       firebase.initializeApp(firebaseConfig);
       if (typeof firebase.analytics === 'function') firebase.analytics();
